# NativeActivity-Test

./: build.gradle
src/androidTest/java/com/flyscale/nativeactivity_test/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  main.c
src/main/java/com/flyscale/nativeactivity_test/: MainActivity.java
src/main/res/values/: strings.xml
src/test/java/com/flyscale/nativeactivity_test/: ExampleUnitTest.java
